# PatternsCollection

./: .gitignore  WORKSPACE
AbstractFactory/: BUILD.bazel  main.cpp  main_serializer.cpp
AbstractFactory/factories/: BUILD.bazel  BasementFactory.cpp  CavesFactory.cpp  RoomFactory.h
AbstractFactory/rooms/: BUILD.bazel  BasementHardRoom.cpp
AbstractFactory/serializers/: BUILD.bazel  GameSerializer.h  RoomSerializer.h
Adapter/: BUILD.bazel
Bridge/: BUILD.bazel
Bridge/axles/: Axle.cpp  PlaneAxle.cpp
Bridge/wheels/: Gamepad.cpp  PlaneWheel.cpp  SteeringWheel.cpp
Builder/: BUILD.bazel  Chef.h
ChainResponsibility/: BUILD.bazel
Command/: BUILD.bazel
Composite/: BUILD.bazel
Composite/ration/: Breakfast.cpp  Dish.cpp
Decorator/: BUILD.bazel  main.cpp
Decorator/include/: DecoratorNotifier.h  EmailNotifier.h  LogNotifier.h  TgNotifier.h
Decorator/notifiers/: DecoratorNotifier.cpp  EmailNotifier.cpp  LogNotifier.cpp  Notifier.cpp  TgNotifier.cpp
Facade/: BUILD.bazel  main.cpp
Facade/facades/: BurgerFacade.cpp  BurgerFacade.h  IsaacFacade.cpp  IsaacFacade.h
FactoryMethod/: BUILD.bazel  main.cpp
FactoryMethod/routers/: Hub.cpp  Hub.h  Router.h  WifiRouter.cpp  WifiRouter.h
FactoryMethod/routes/: Route.h
Mediator/: BUILD.bazel
Memento/: BUILD.bazel
Observer/: BUILD.bazel
Prototype/: BUILD.bazel
State/: BUILD.bazel
Strategy/: BUILD.bazel
Visitor/: BUILD.bazel
cc/: defs.bzl
package/: BUILD.bazel
tar/: BUILD.bazel
