load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

cc_binary(
    name = "AbstractFactory",
    srcs = ["main.cpp"],
    deps = [
        "//AbstractFactory/factories:isaac_factories",
    ],
)

cc_binary(
    name = "AbstractFactorySerializer",
    srcs = ["main_serializer.cpp"],
    deps = [
        "//AbstractFactory/factories:isaac_factories",
        "//AbstractFactory/serializers",
    ],
)

pkg_tar(
    name = "abstract-factory-bin",
    srcs = [
        ":AbstractFactory",
        ":AbstractFactorySerializer",
    ],
    mode = "0755",
    package_dir = "bin",
    visibility = ["//tar:__pkg__"],
)
