load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

cc_binary(
    name = "ChainResponsibility",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
)

pkg_tar(
    name = "chain-responsibility-tar",
    srcs = [":Adapter"],
    mode = "0755",
    package_dir = "bin",
    visibility = ["//tar:__pkg__"],
)
