load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

cc_binary(
    name = "Command",
    srcs = glob([
        "*.cpp",
        "commands/*.cpp",
        "cookery/*.cpp",
        "*.h",
        "commands/*.h",
        "cookery/*.h",
    ]),
    linkopts = ["-lpthread"],
)

pkg_tar(
    name = "command-tar",
    srcs = [":Command"],
    mode = "0755",
    package_dir = "bin",
    visibility = ["//tar:__pkg__"],
)
