load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

cc_binary(
    name = "Prototype",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    copts = ["-std=c++11"],
)

pkg_tar(
    name = "prototype-tar",
    srcs = [":Prototype"],
    mode = "0755",
    package_dir = "bin",
    visibility = ["//package:__pkg__"],
)
