load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

cc_binary(
    name = "State",
    srcs = glob([
        "*.cpp",
        "*.h",
        "states/*.h",
        "states/*.cpp",
    ]),
)

pkg_tar(
    name = "state-tar",
    srcs = [":State"],
    mode = "0755",
    package_dir = "bin",
    visibility = ["//package:__pkg__"],
)
