load("//cc:defs.bzl", "cc_shared_library")

cc_shared_library(
    name = "isaac_factories",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    pkg = True,
    pkg_filegroup = "isaac_factories_tar",
    pkg_filegroup_visibility = ["//AbstractFactory:__subpackages__"],
    visibility = ["//AbstractFactory:__subpackages__"],
    deps = ["//AbstractFactory/rooms:isaac_rooms"],
)
